--- a/FE/package.json
+++ b/FE/package.json
@@ -13,12 +13,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.0",
     "react-scroll-to-top": "^3.0.0",
     "react-select": "^5.8.3",
